implemented User crud operations with best code quality

--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,5 @@
 DATABASE_HOSTNAME = localhost
 DATABASE_PORT = 5432
 DATABASE_PASSWORD = 1234
-DATABASE_NAME = fastapi
+DATABASE_NAME = webappdb
 DATABASE_USERNAME = postgres
