--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,38 +1,30 @@
-name: FastAPI Code Linting
+name: FastAPI CI Test
 
 on:
-  pull_request:
-    branches:
-      - main
+#  push:
+#    branches: [ 'main', 'feature/**']
+#    tags: [ 'v*']
+   pull_request:
+     branches: [ 'main' ]
 
 jobs:
-  lint:
+
+  code-quality:
+    name: Check coding standards
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Install poetry
+        run: pipx install poetry
+
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.x  # Choose the Python version you need
+          python-version: 3.10
+          cache: poetry
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8  # Install flake8 for linting
-          # Add other dependencies if needed
+      - name: Install Python dependencies
+        run: poetry install
 
-      - name: Lint FastAPI code
-        run: |
-          flake8 app
-        continue-on-error: true  # Continue even if there are linting errors
-
-      - name: Check for linting errors
-        run: |
-          if [ -n "$(flake8 app)" ]; then
-            echo "Linting errors found. Please fix them before merging."
-            exit 1
-          fi
-
+      - name: Check code formatting
+        run: poetry run poe black-check
