--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,30 +1,33 @@
 name: FastAPI CI Test
 
 on:
-#  push:
-#    branches: [ 'main', 'feature/**']
-#    tags: [ 'v*']
-   pull_request:
-     branches: [ 'main' ]
+  pull_request:
+    branches:
+      - 'main'
 
 jobs:
-
   code-quality:
     name: Check coding standards
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Install poetry
-        run: pipx install poetry
-
-      - uses: actions/setup-python@v4
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.11
-          cache: poetry
+          python-version: 3.10
 
-      - name: Install Python dependencies
-        run: poetry install
+      - name: Install dependencies
+        run: |
+          cd app
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Check code formatting
-        run: poetry run poe black-check
+      - name: Lint with flake8
+        run: |
+          # Stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # Exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
